--- a/public/index.html
+++ b/public/index.html
@@ -137,9 +137,22 @@
 				</div>
 			</div>
 
+ <div class=" col-md-4  col-sm-4   ">
+        <div class="item-ws"  onclick="location.href='workshop/big_data/';">
+          <div class="controls">
+            <div class="control control-left"></div>
+            <div class="control control-center"></div>
+            <div class="control control-right"></div>
+          </div>
+          <div class="item-desc">
+            <img  src="assets/img/iconbigdata.png" class="img-responsive pull-center">
+            <p class="item-heading">Big Data</p>
+          </div>
+        </div>
+      </div>
 
         <div class=" col-md-4  col-sm-4   ">
-        <div class="item-ws"  onclick="location.href='workshop/webdevelopment/';">
+        <div class="item-ws"  onclick="location.href='workshop/web_development/';">
           <div class="controls">
             <div class="control control-left"></div>
             <div class="control control-center"></div>
@@ -153,19 +166,7 @@
       </div>
 
 
-        <div class=" col-md-4  col-sm-4   ">
-        <div class="item-ws"  onclick="location.href='workshop/bigdata/';">
-          <div class="controls">
-            <div class="control control-left"></div>
-            <div class="control control-center"></div>
-            <div class="control control-right"></div>
-          </div>
-          <div class="item-desc">
-            <img  src="assets/img/iconbigdata.png" class="img-responsive pull-center">
-            <p class="item-heading">Big Data</p>
-          </div>
-        </div>
-      </div>
+       
 		</div>
 		<div class="row" style="padding-top: 50px;">
 			<div class="col-md-6" style="padding-left: 10vw;">
