--- a/public/workshop/web_development/index.html
+++ b/public/workshop/web_development/index.html
@@ -80,8 +80,17 @@
 
               <div class="col-md-7">
               <p ><span class="spGreen" >//About</span></br>
-            Workshop covering basics of web development for school students. Students will be selected from a test we conduct.</br>
-            More details will be uploaded soon.
+           The World Wide Web is an information space where documents and other web resources are identified by Uniform Resource Locators, interlinked by hypertext links, and can be accessed via the Internet.<br>
+           <span class="spGreen" >//About workshop</span></br>
+        With over 3.2 billion people on the web, you can literally impact lives across the world.<br>
+
+
+Department of Computer Science and Engineering of College of Engineering Trivandrum in association with Mozilla Campus Club, CET presents to you at Dot Slash ‘18 a six-hour hands-on workshop on Introduction to Web.<br>
+
+The workshop is specifically targeted at school students (Classes VII, VIII, IX).<br><br>
+<span class="spPurple">Free entry for students with ID card</span>
+
+
              
 
 
@@ -89,7 +98,7 @@
               </div>
 
               <div class="col-md-4">
-              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018 </br></p>
+              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018 </br> 9:00 AM to 4:00 PM</p>
               </div>
 
           </div>
@@ -97,12 +106,12 @@
           <div style="margin-top: 30px;" class ="row">
 
               <div class="col-md-4">
-              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>*  </br> </p>
+              <p ><span class="spPurple" > >>>Pre-Requisites</span></br>* No experience required </br> </p>
               </div>
 
               <div class="col-md-4">
               <p><span class="spMagenta">install_these()</span></br>
-             * </p>
+             * No installation required<br>* Laptop is not necessary</p>
               </div>
               <div class="col-md-4">
               <p><span class="spOrange">Classes handled by</span></br>*</br><!-- <a href="https://www.linkedin.com/in/tittuvarghese/">::check_this_out()</a> --></p>
@@ -118,7 +127,7 @@
               </div>
 
               <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>*</br>* </br></p>
+              <p ><span class="spPurple" >//Contact</span></br>* Ankith - 9495337488</br>* Santhisenan - 9400993111</br></p>
               </div>
 
           </div>
