--- a/public/event/bitcoin_challenge/index.html
+++ b/public/event/bitcoin_challenge/index.html
@@ -15,154 +15,148 @@
   <link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../../assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
- <!--  <script src="../../assets/js/modernizr.custom.js"></script> -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!--  <script src="../../assets/js/modernizr.custom.js"></script> -->
 
 
   <link rel="stylesheet" type="text/css" href="../../assets/css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="../../assets/css/demo.css" />
-<link rel="stylesheet" type="text/css" href="../../assets/css/component1.css" />
-<script src="../../assets/js/modernizr-2.6.2.min.js"></script>
-<style type="text/css">
-      body{
-         font-family: 'Roboto Mono', monospace;
-      }
+  <link rel="stylesheet" type="text/css" href="../../assets/css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="../../assets/css/component1.css" />
+  <script src="../../assets/js/modernizr-2.6.2.min.js"></script>
+  <style type="text/css">
+  body{
+    font-family: 'Roboto Mono', monospace;
+  }
 
-      @media (max-width: 525px) {
-      p{
-        font-size: 15px;
-      }
-}
-    </style>
+  @media (max-width: 525px) {
+    p{
+      font-size: 15px;
+    }
+  }
+  </style>
 </head>
 <body>
 
 
   <div id="container">
 
-<div id="container">
+    <div id="container">
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#232323;border:unset;">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
-       <button aria-expanded="false" class="navbar-toggle collapsed"  style="border: 0px;background-color: unset;padding:unset;"  onclick="menuToggle()" type="button">navbar/></button> <a class="navbar-brand" href="../../" rel="home" style="padding: unset;z-index: 9999;" ><img alt="Logo Image" src="../../assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;" ></a>
-      </div><!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a class="at"  style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;" onclick="menuToggle()">navbar /&gt;</span></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <div class="row" style="padding-top: 10vh;">
-     <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
-  <div class="col-md-4">
-  <img src="../../assets/img/iconbitcoin.png" class="img-responsive pull-center">
- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta">Register_now()</span></a></br></p>
-  <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
-</div>
-<div class="col-md-7">
-  <div class="item" style="height: unset;">
-
-
-         <div class="controls">
-          <div class="control control-left"></div>
-          <div class="control control-center"></div>
-          <div class="control control-right"></div>
+      <!-- Navbar -->
+      <nav class="navbar navbar-default navbar-fixed-top" style="background-color:#232323;border:unset;">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
+            <button aria-expanded="false" class="navbar-toggle collapsed"  style="border: 0px;background-color: unset;padding:unset;"  onclick="menuToggle()" type="button">navbar/></button> <a class="navbar-brand" href="../../" rel="home" style="padding: unset;z-index: 9999;" ><img alt="Logo Image" src="../../assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;" ></a>
+          </div><!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a class="at"  style="margin-top: 8px;"><span id="regSpan" style="color: white;font-size:18px;" onclick="menuToggle()">navbar /&gt;</span></a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+
+      <div class="row" style="padding-top: 10vh;">
+        <h1 style="text-align: center;"><span class="spMagenta">< Event - Challenge ></span></h1>
+        <div class="col-md-4">
+          <img src="../../assets/img/iconbitcoin.png" class="img-responsive pull-center">
+          <!-- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta">Register_now()</span></a></br></p> -->
+          <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
+        </div>
+        <div class="col-md-7">
+          <div class="item" style="height: unset;">
+            <div class="controls">
+              <div class="control control-left"></div>
+              <div class="control control-center"></div>
+              <div class="control control-right"></div>
+            </div>
             <div class="item-desc">
 
-            <p class="item-heading">Bitcoin_challenge</p>
-            <div style="margin-top: 30px;" class ="row">
+              <p class="item-heading">Bitcoin Challenge</p>
+              <div style="margin-top: 30px;" class ="row">
 
-              <div class="col-md-7">
-              <p ><span class="spGreen" >//About</span></br>Cryptocurrency is hidden in a system, the participant has to make use  of the vulnerabilities in the system to access the cryptocurrency. The winner gets it all.
+                <div class="col-md-7">
+                  <p ><span class="spGreen" >//About</span></br>Hackers are the Internet's immune system and the next world war will be cyber. Dotslash CET proudly presents "The Bitcoin Job", a catch the flag scenario where we actually challenge you to hack our systems. The challenge consist of 20 levels and the first one to complete all will be rewarded with 20K worth bitcoins. Each level will be based on real world vulnerabilities and the one who has the art to exploit them can only win.</p>
+                </div>
 
+                <div class="col-md-5">
+                  <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to - </br>25th February 2018</br>4:00pm</p>
+                </div>
 
-
-              </p>
               </div>
+              <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p>
+              <div style="margin-top: 30px;" class ="row">
 
-              <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>9:00 AM to - </br>25th February 2018</br>4:00pm</p>
+                <div class="col-md-4">
+                  <p><span class="spOrange">$TakeAway</span></p><p style="margin-top: -10px;"></br><span style="font-size:60px;">&#8377;20k</span></p>
+                  <p style="margin-top: 18px;"><span class="spOrange">$EntryFee</span></p><p style="margin-top: -10px; margin-bottom: 26px;"></br><span style="font-size:60px;">Free</span></p>
+                </div>
+                <div class="col-md-8">
+                  <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - 8086432469</br>* Mazhar Jasfin - 9495893166</br></p>
+                </div>
+
               </div>
+              <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p>
+              <div style="margin-top: 30px;" class ="row">
 
-          </div>
-          <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p>
-          <div style="margin-top: 30px;" class ="row">
 
-              <div class="col-md-8">
-              <p ><span class="spPurple" > >>>Event Rules</span></br>* Teams of two may participate</br>* Please refrain from helping your friends.</br>* There is no other restriction on participation.</p>
+                <div class="col-md-6">
+                  <!-- <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');" href="#"><span class="spMagenta" >Register_now()</span></a></br></p> -->
+                </div>
+
+                <div class="col-md-6">
+
+                </div>
+
               </div>
-              <div class="col-md-2">
-              <p><span class="spOrange">$TakeAway</span></p><p style="margin-top: -10px;"></br><span style="font-size:60px;">&#8377;20k</span></p>
-              <p style="margin-top: 18px;"><span class="spOrange">$EntryFee</span></p><p style="margin-top: -10px; margin-bottom: 26px;"></br><span style="font-size:60px;">Free</span></p>
-              </div>
-
-          </div>
-          <p><span class="spGreen">/*-----------------------------------------------------------*/</span></p>
-          <div style="margin-top: 30px;" class ="row">
-
-
-              <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');" href="#"><span class="spMagenta" >Register_now()</span></a></br></p>
-              </div>
-
-              <div class="col-md-6">
-              <p ><span class="spPurple" >//Contact</span></br>* Akhil Thankachen - 8086432469</br>* Mazhar Jasfin - 9495893166</br></p>
-              </div>
-
-          </div>
-            <!-- <button class="md-trigger" data-modal="modal-1">Fade in &amp; Scale</button>
+              <!-- <button class="md-trigger" data-modal="modal-1">Fade in &amp; Scale</button>
             -->
           </div>
-  </div>
-</div>
-</div>
-<section class="foot" style="background-color: #232323" id="footerr">
-          <div class="row">
-            <div class="col-md-4 col-xs-12 footerlog">
-              <img src="../../assets/img/footerimg.png" class="fimg">
-            </div>
-            <div class="col-md-4 col-xs-12">
-              <p>/*Follow us at*/</p>
-              <a href="https://www.facebook.com/dotslashcet/"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.instagram.com/dotslash18/"><i class="fa fa-instagram"></i></a>
-              <a href="mailto:dotslash@cet.ac.in" target="_top"><i class="fa fa-envelope"></i></a>
-              </div>
-            <div class="col-md-4 col-xs-12 footerdesc"><span class="spGreen">//Department of Computer Science<br>and Engineering<br></span><span class="spMagenta">//College of Engineering<br>Trivandrum<br></span><br><span class="spPurple">//Event Convenor<br>Harinath R 8289902408</span></div>
-
         </div>
-      </section>
-<div class="component">
-        <!-- Start Nav Structure -->
-          <button class="cn-button" id="cn-button">+</button>
-        <div class="cn-wrapper" id="cn-wrapper">
-            <ul>
-
-              <li><a href="#footerr"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
-              <li><a href="../../index.html#ws"><i class="fa fa-laptop" ></i></a></li>
-              <li><a href="../../index.html"><i class="fa fa-home"></i></a></li>
-               <li><a href="../../index.html#events"><i class="fa fa-flag-checkered"></i></a></li>
-
-            <li><a href="../../index.html"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
-
-             </ul>
-        </div>
-        <div id="cn-overlay" class="cn-overlay"></div>
-        <!-- End Nav Structure -->
       </div>
+    </div>
+    <section class="foot" style="background-color: #232323" id="footerr">
+      <div class="row">
+        <div class="col-md-4 col-xs-12 footerlog">
+          <img src="../../assets/img/footerimg.png" class="fimg">
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <p>/*Follow us at*/</p>
+          <a href="https://www.facebook.com/dotslashcet/"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.instagram.com/dotslash18/"><i class="fa fa-instagram"></i></a>
+          <a href="mailto:dotslash@cet.ac.in" target="_top"><i class="fa fa-envelope"></i></a>
+        </div>
+        <div class="col-md-4 col-xs-12 footerdesc"><span class="spGreen">//Department of Computer Science<br>and Engineering<br></span><span class="spMagenta">//College of Engineering<br>Trivandrum<br></span><br><span class="spPurple">//Event Convenor<br>Harinath R 8289902408</span></div>
 
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="../../assets/js/polyfills.js"></script>
-    <script src="../../assets/js/demo1.js"></script>
-<script src="../../assets/js/colorAnim.js"></script>
+      </div>
+    </section>
+    <div class="component">
+      <!-- Start Nav Structure -->
+      <button class="cn-button" id="cn-button">+</button>
+      <div class="cn-wrapper" id="cn-wrapper">
+        <ul>
+
+          <li><a href="#footerr"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
+          <li><a href="../../index.html#ws"><i class="fa fa-laptop" ></i></a></li>
+          <li><a href="../../index.html"><i class="fa fa-home"></i></a></li>
+          <li><a href="../../index.html#events"><i class="fa fa-flag-checkered"></i></a></li>
+
+          <li><a href="../../index.html"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
+
+        </ul>
+      </div>
+      <div id="cn-overlay" class="cn-overlay"></div>
+      <!-- End Nav Structure -->
+    </div>
+
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../../assets/js/polyfills.js"></script>
+  <script src="../../assets/js/demo1.js"></script>
+  <script src="../../assets/js/colorAnim.js"></script>
 </div></div>
 
 
