--- a/public/event/gaming/fifa/index.html
+++ b/public/event/gaming/fifa/index.html
@@ -114,7 +114,7 @@
                 </div>
 
                 <div class="col-md-6">
-                  <p ><span class="spPurple" >//Contact</span></br>* Rahul Giridharan - 8848266693</br>* Nithin M - 8848104733</br></p>
+                  <p ><span class="spPurple" >//Contact</span></br>* Rahul Giridharan - 8848266693</br>* Nithin M Warrier - 8848104733</br></p>
                 </div>
 
               </div>
