--- a/public/event/gaming/rainbow_six_siege/index.html
+++ b/public/event/gaming/rainbow_six_siege/index.html
@@ -90,7 +90,7 @@
               <div style="margin-top: 30px;" class ="row">
 
                 <div class="col-md-8">
-                  <p ><span class="spPurple" >Match Rules</span><ul><li>* All matches must be played in their entirety.</li><li>* Randomized maps MUST be used.</li><li>* The New Operators are allowed.</li><li>* In case of issues Decision made by coordinators are final.</li></ul></p>
+                  <p ><span class="spPurple" >Match Rules</span><ul><li>* All matches must be played in their entirety.</li><li>* Randomized maps MUST be used.</li><li>* The New Operators are allowed.</li><li>* In case of issues Decision made by coordinators are final.</li></br><li><a style="" href="../../../assets/pdf/events/gaming/rainbow_six_siege/game_settings.pdf">::check_this_out(game_settings)</a></li></ul></p>
                 </div>
                 <div class="col-md-4">
                   <p><span class="spOrange">$Prizes</span></p><p>* First - <span style="font-size:30px;margin-top: 10px;">6k</span></p>
