--- a/public/event/code_wars/index.html
+++ b/public/event/code_wars/index.html
@@ -63,7 +63,7 @@
      <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
   <img src="../../assets/img/iconcoding.png" class="img-responsive pull-center">
- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta" >Register_now()</span></a></br></p>
+ <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://goo.gl/forms/E2LPYRJW6Kcz9byY2" ><span class="spMagenta" >Register_now()</span></a></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
 <div class="col-md-7">
@@ -107,7 +107,7 @@
 
 
               <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="#" onclick="popup('dotslash-workshops-100344');"><span class="spMagenta" >Register_now()</span></a></br></p>
+               <p style="font-size: 30px;margin-top: 20px;"><a href="https://goo.gl/forms/E2LPYRJW6Kcz9byY2" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
               </div>
 
               <div class="col-md-6">
