--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugger/';">
+				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugging/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
