changes in talks

--- a/public/404.html
+++ b/public/404.html
@@ -9,10 +9,10 @@
   <meta name="keywords" content="Dotslash,Dotslash '18,CET,CS Department,Computer Science Department" />
   <meta name="theme-color" content="#000000" />
   <link rel="shortcut icon" href="ds.png">
-  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://dotslashcet.org/assets/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://dotslashcet.org/assets/css/style.css">
   <style type="text/css">
   body{
     font-family: 'Roboto Mono', monospace;
@@ -24,7 +24,7 @@
     top: 100px;
     width: 16px;
     height: 90%;
-    background-image: url(assets/img/whiten_This.png);
+    background-image: url(https://dotslashcet.org/assets/img/whiten_This.png);
     background-repeat: no-repeat;
   }
   .bg{
@@ -43,7 +43,7 @@
   <div id="container">
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
-        <img onclick="document.location='https://www.dotslashcet.org'" style="display: block; margin: auto; cursor: pointer; padding-bottom: 16px;" class="img-fluid" alt="Dot Slash '18" src="assets/img/logo.png">
+        <img onclick="document.location='https://www.dotslashcet.org'" style="display: block; margin: auto; cursor: pointer; padding-bottom: 16px;" class="img-fluid" alt="Dot Slash '18" src="https://dotslashcet.org/assets/img/logo.png">
       </br>
         <p style="text-align: center;"><span style="color: #FF5151">Error:</span><span style="color: #75DD37"> 404</span> Page Not Found.</p>
       </br>
