--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
 		<div class="row" style="margin:auto" >
 			<h1 id="events" style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -194,7 +194,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/women_coder';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/women_coder';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -204,7 +204,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/code_wars/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/code_wars/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -214,7 +214,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugging/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugging/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -224,7 +224,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -234,7 +234,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/gaming/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/gaming/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -244,7 +244,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -254,7 +254,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -264,7 +264,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
-				<div class='box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/photomanipulation/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/photomanipulation/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
@@ -275,58 +275,68 @@
 			</div>
 		</div>
 		<div class="row" style="margin:auto" >
-			<h1 id="events" style="text-align: center;"><span class="spMagenta">< Talks ></span></h1>
+			<div class="col-md-10 col-md-offset-1">
+				<h1 id="events" style="text-align: center;"><span class="spMagenta">< Talk Series - Information Security ></span></h1>
+				Information security, sometimes shortened to InfoSec, is the practice of preventing unauthorized access, use, disclosure, disruption, modification, inspection, recording or destruction of information. It is a general term that can be used regardless of the form the data may take (e.g., electronic, physical).
+			</div>
+		</div>
+		<div class="row" style="margin:auto" >
 			<div class="col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1">
-				<div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/securitydemonstration/';" >
+				<div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/series/information_security/1/';" >
 
 					<img src="assets/img/secure.png" style="height: 200px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
 					<img src="assets/img/talkgif.gif" style="height:80px;margin: auto;display: inherit;">
-					<p style="text-align: center;margin-top: 20px;">Security Demonstration and Live Hacking</p>
+					<p style="text-align: center;margin-top: 20px;">
+						Sreenath Sasikumar
+						<br>
+						Day 1</p>
+					</div>
+				</div>
+				<div class="col-md-5 col-sm-5">
+					<div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/series/information_security/2/';" >
 
+						<img src="assets/img/secure.png" style="height: 200px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+						<img src="assets/img/talkgif.gif" style="height:80px;margin: auto;display: inherit;">
+						<p style="text-align: center;margin-top: 20px;">
+							Kiran S Dinesh
+							<br>
+							Day 2</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="component">
+					<button class="cn-button" id="cn-button">+</button>
+					<div class="cn-wrapper" id="cn-wrapper">
+						<ul>
+							<li><a href="#"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
+							<li><a href="#ws"><i class="fa fa-laptop" ></i></a></li>
+							<li><a href="#"><i class="fa fa-home"></i></a></li>
+							<li><a href="#events"><i class="fa fa-flag-checkered"></i></a></li>
+							<li><a href="#"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
+						</ul>
+					</div>
+					<div id="cn-overlay" class="cn-overlay"></div>
+					<!-- End Nav Structure -->
 				</div>
 			</div>
-			<div class="col-md-5 col-sm-5">
-				<div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/informationsecurity/';" >
-
-					<img src="assets/img/info.png" style="height: 200px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
-					<img src="assets/img/talkgif.gif" style="height:80px;margin: auto;display: inherit;">
-					<p style="text-align: center;margin-top: 20px;">Information Security</p>
-
+			<section class="foot" style="background-color: #232323;">
+				<div class="row" >
+					<div class="col-md-4 col-xs-12 footerlog">
+						<img src="assets/img/footerimg.png" class="fimg">
+					</div>
+					<div class="col-md-4 col-xs-12">
+						<p>/*Follow us at*/</p>
+						<a href="https://www.facebook.com/dotslashcet/"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.instagram.com/dotslash18/"><i class="fa fa-instagram"></i></a>
+						<a href="mailto:dotslash@cet.ac.in" target="_top"><i class="fa fa-envelope"></i></a>
+					</div>
+					<div class="col-md-4 col-xs-12 footerdesc"><span class="spGreen">//Department of Computer Science<br>and Engineering<br></span><span class="spMagenta">//College of Engineering<br>Trivandrum<br></span><br><span class="spPurple">//Event Convenor<br>Harinath R 8289902408</span></div>
 				</div>
-			</div>
-		</div>
-		<div class="component">
-			<button class="cn-button" id="cn-button">+</button>
-			<div class="cn-wrapper" id="cn-wrapper">
-				<ul>
-					<li><a href="#"><i class="material-icons"  style="transform: rotate(70deg);">phone</i></a></li>
-					<li><a href="#ws"><i class="fa fa-laptop" ></i></a></li>
-					<li><a href="#"><i class="fa fa-home"></i></a></li>
-					<li><a href="#events"><i class="fa fa-flag-checkered"></i></a></li>
-					<li><a href="#"><i class="fa fa-users" style="font-size:23px;"></i></a></li>
-				</ul>
-			</div>
-			<div id="cn-overlay" class="cn-overlay"></div>
-			<!-- End Nav Structure -->
-		</div>
-	</div>
-	<section class="foot" style="background-color: #232323;">
-		<div class="row" >
-			<div class="col-md-4 col-xs-12 footerlog">
-				<img src="assets/img/footerimg.png" class="fimg">
-			</div>
-			<div class="col-md-4 col-xs-12">
-				<p>/*Follow us at*/</p>
-				<a href="https://www.facebook.com/dotslashcet/"><i class="fa fa-facebook"></i></a>
-				<a href="https://www.instagram.com/dotslash18/"><i class="fa fa-instagram"></i></a>
-				<a href="mailto:dotslash@cet.ac.in" target="_top"><i class="fa fa-envelope"></i></a>
-			</div>
-			<div class="col-md-4 col-xs-12 footerdesc"><span class="spGreen">//Department of Computer Science<br>and Engineering<br></span><span class="spMagenta">//College of Engineering<br>Trivandrum<br></span><br><span class="spPurple">//Event Convenor<br>Harinath R 8289902408</span></div>
-		</div>
-	</section>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="assets/js/polyfills.js"></script>
-	<script src="assets/js/demo1.js"></script>
-	<script src="assets/js/colorAnim.js"></script>
-</body>
-</html>
+			</section>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+			<script src="assets/js/polyfills.js"></script>
+			<script src="assets/js/demo1.js"></script>
+			<script src="assets/js/colorAnim.js"></script>
+		</body>
+		</html>
