--- a/public/index.html
+++ b/public/index.html
@@ -276,8 +276,8 @@
 		</div>
 		<div class="row" style="margin:auto" >
 			<div class="col-md-10 col-md-offset-1">
-				<h1 id="events" style="text-align: center;"><span class="spMagenta">< Talk Series - Information Security ></span></h1>
-				Information security, sometimes shortened to InfoSec, is the practice of preventing unauthorized access, use, disclosure, disruption, modification, inspection, recording or destruction of information. It is a general term that can be used regardless of the form the data may take (e.g., electronic, physical).
+				<h1 id="events" style="text-align: center;"><span class="spMagenta" style="">< Talk Series ></span></h1>
+				<h3 style="text-align: center;">Information Security</h3>
 			</div>
 		</div>
 		<div class="row" style="margin:auto" >
