--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 			<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header" style="padding: 10px;margin-left: 5vw;">
-					<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" id="collapser" style="border: 0px;background-color: unset;padding:unset;" type="button">navbar/></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;" onclick="menuToggle()"></a>
+				<button aria-expanded="false" class="navbar-toggle collapsed"  style="border: 0px;background-color: unset;padding:unset;"  onclick="menuToggle()" type="button">navbar/></button> <a class="navbar-brand" href="#" rel="home" style="padding: unset;"><img alt="Logo Image" src="assets/img/logo.png" style="display:block;height: 45px;padding-top: 5px;"></a>
 				</div><!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="menu collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="border-color: black; max-height: unset; height: 1px;">
 					<ul class="nav navbar-nav navbar-right">
