talk series style change

--- a/public/index.html
+++ b/public/index.html
@@ -276,7 +276,7 @@
 		</div>
 		<div class="row" style="margin:auto" >
 			<div class="col-md-10 col-md-offset-1">
-				<h1 id="events" style="text-align: center;"><span class="spMagenta" style="">< Talk Series ></span></h1>
+				<h1 id="events" style="text-align: center;"><span class="spPurple" style=""> Talk_series();</span></h1>
 				<h3 style="text-align: center;">Information Security</h3>
 			</div>
 		</div>
