talks style change contd.

--- a/public/talks/series/information_security/2/index.html
+++ b/public/talks/series/information_security/2/index.html
@@ -60,7 +60,7 @@
       </nav>
 
       <div class="row" style="padding-top: 10vh;">
-        <h1 style="text-align: center;"><span class="spMagenta">/* Talk */</span></h1>
+        <h1 style="text-align: center;"><span class="spPurple">Talk(2);</span></h1>
         <div class="col-md-4">
           <img src="../../../../assets/img/secure.png" class="img-responsive pull-center" style="margin: auto; margin-bottom: 40px;">
           <p align="center">Brought to you by</p>
