--- a/public/trying_t-rex/index.html
+++ b/public/trying_t-rex/index.html
@@ -9,7 +9,7 @@
     <script src="index.js"></script>
 </head>
 
-<body id="t" class="offline">
+<body id="t" class="offline" style="background-color: #303030">
     <div id="main-frame-error" class="interstitial-wrapper">
         <div id="main-content">
             <div class="icon icon-offline" alt=""></div>
