--- a/public/trying_t-rex/index.html
+++ b/public/trying_t-rex/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <title >chrome easter egg: t-rex runner</title>
+    <title >t-rex game | Dotslash '18</title>
+    <link rel="shortcut icon" href="ds.png">
     <link rel="stylesheet" type="text/css" href="index.css">
      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css">
