--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 		</nav>
 		<div class="row">
 			<div class="col-md-4 ">
-				<img src="assets/img/t-rex_m.png" id="t-rex">
+				<img src="assets/img/t-rex_m.png" id="t-rex" onclick="location.href='disruption/';">
 			</div>
 			<div class="col-md-8 col-xs-12  ">
 				<h2 class="spGreen" style="padding-left: 14vw;">../CET/<span style="background:#4b4b4b;">Computer_Science_Dept</span>/</h2>
@@ -76,7 +76,7 @@
 				<h2 class="spYellow" style="padding-left: 17vw;">Hello Virtual Reality</h2>
 				<h2 class="spPurple" style="padding-left: 17vw;">Hello USB-C</h2>
 				<h2 class="spGreen" style="padding-left: 17vw;">Hello Assistant</h2>
-				<h2 class="spMagenta" style="padding-left: 17vw;">Hello Something</h2>
+				<h2 class="spMagenta" style="padding-left: 17vw;">Hello disruption!</h2>
 				<h2 class="spGreen" style="padding-left: 17vw;">...</h2>
 				<p></p>
 			</div>
