--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 		</nav>
 		<div class="row">
 			<div class="col-md-4 ">
-				<img src="assets/img/t-rex_m.png" id="t-rex" onclick="location.href='disruption/';">
+				<img style="cursor: pointer;" src="assets/img/t-rex_m.png" id="t-rex" onclick="location.href='disruption/';">
 			</div>
 			<div class="col-md-8 col-xs-12  ">
 				<h2 class="spGreen" style="padding-left: 14vw;">../CET/<span style="background:#4b4b4b;">Computer_Science_Dept</span>/</h2>
