--- a/public/disruption/index.html
+++ b/public/disruption/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <title >t-rex game | Dotslash '18</title>
     <link rel="shortcut icon" href="ds.png">
