workshops updated, events commented out

--- a/public/moved/workshop/web_development/index.html
+++ b/public/moved/workshop/web_development/index.html
@@ -86,12 +86,12 @@
                     Department of Computer Science and Engineering of College of Engineering Trivandrum in association with Mozilla Campus Club, CET presents to you at Dot Slash ‘18 a six-hour hands-on workshop on Introduction to Web.<br>
 
                     The workshop is specifically targeted at school students (Classes VII, VIII, IX).<br><br>
-                    <span class="spPurple">Free entry for school students.</span>
+                    <span class="spOrange">Free entry for school students.</span>
                   </p>
                 </div>
 
                 <div class="col-md-4">
-                  <p><span class="spMagenta">#Date and timing</span></br>25th February 2018 </br> 9:00 AM to 4:00 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>7th April 2018 </br> 9:00 AM to 4:00 PM</p>
                 </div>
 
               </div>
