--- a/public/moved/index.html
+++ b/public/moved/index.html
@@ -46,7 +46,7 @@
 			<div style="margin-top: 300px;margin-bottom: 150px;">
 				<p id="greeting" ></p>
 				<!-- <h1 style="text-align: center;font-size: 50px;"><span ></span></h1>  -->
-				<h1 style="text-align: center;" class="spGreen dateText"></br>/* 24, 25 Feb 2018 */ </br><span style="color:#cd0000;">!important</span> </h1>
+				<h1 style="text-align: center;" class="spGreen dateText"></br>/* 7, 8 April 2018 */ </br><span style="color:#cd0000;">!important</span> </h1>
 			</div>
 		</header>
 		<!-- Navbar -->
@@ -110,7 +110,21 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4  col-sm-4  ">
+			<div class=" col-md-4  col-sm-4   ">
+				<div class="item-ws"  onclick="location.href='workshop/web_development/';">
+					<div class="controls">
+						<div class="control control-left"></div>
+						<div class="control control-center"></div>
+						<div class="control control-right"></div>
+					</div>
+					<div class="item-desc">
+						<img  src="assets/img/webicon.png" class="img-responsive pull-center">
+						<p class="item-heading">Web Development</p>
+					</div>
+				</div>
+			</div>
+
+			<!-- <div class="col-md-4  col-sm-4  ">
 				<div class="item-ws"  onclick="location.href='workshop/blockchain/';">
 					<div class="controls">
 						<div class="control control-left"></div>
@@ -149,21 +163,9 @@
 						<p class="item-heading">Big Data</p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
-			<div class=" col-md-4  col-sm-4   ">
-				<div class="item-ws"  onclick="location.href='workshop/web_development/';">
-					<div class="controls">
-						<div class="control control-left"></div>
-						<div class="control control-center"></div>
-						<div class="control control-right"></div>
-					</div>
-					<div class="item-desc">
-						<img  src="assets/img/webicon.png" class="img-responsive pull-center">
-						<p class="item-heading">Web Development</p>
-					</div>
-				</div>
-			</div>
+		
 
 
 
@@ -171,10 +173,11 @@
 		<div class="row" style="padding-top: 50px;">
 			<div class="col-md-6" style="padding-left: 10vw;">
 				<h2 class="spPurple" >//Events</h2>
-				<h2 class="spMagenta">Hello Bitcoin</h2>
-				<h2 class="spYellow">Hello Virtual Reality</h2>
-				<h2 class="spPurple">Hello USB-C</h2>
-				<h2 class="spGreen">Hello Assistant</h2>
+				<h2 class="spMagenta">while true</h2>
+				<h2 class="spYellow">&nbsp code();</h2>
+				<h2 class="spGreen">&nbsp save();</h2>
+				<h2 class="spPurple">repeat</h2>
+				
 				<p></p>
 			</div>
 			<div class="col-md-4">
@@ -183,7 +186,8 @@
 		</div>
 		<div class="row" style="margin:auto" >
 			<h1 id="events" style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
-			<div class="col-md-4 col-sm-4">
+			<h2 class="spGreen" style="text-align: center;padding-bottom: 100px;">&nbsp coming soon</h2>
+			<!-- <div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
@@ -272,9 +276,9 @@
 					<p style="text-align: center;margin-top: 78px;">< Photomanipulation ></p>
 					<p class="prize">$prize:2.5k</p>
 				</div>
-			</div>
+			</div> -->
 		</div>
-		<div class="row" style="margin:auto" >
+		<!--<div class="row" style="margin:auto" >
 			<div class="col-md-10 col-md-offset-1">
 				<h1 id="events" style="text-align: center;"><span class="spPurple" style=""> Talk_series();</span></h1>
 				<h3 style="text-align: center;">Information Security</h3>
@@ -304,7 +308,7 @@
 
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<div class="component">
 					<button class="cn-button" id="cn-button">+</button>
 					<div class="cn-wrapper" id="cn-wrapper">
