--- a/public/workshop/big_data/index.html
+++ b/public/workshop/big_data/index.html
@@ -90,7 +90,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <p><span class="spMagenta">#Date and timing</span></br>24th February 2018 </br>9:00 AM to </br>1:00 PM</br></br>2:00 PM to </br>5:00 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>7th, 8th April 2018 </br>9:00 AM to </br>1:00 PM</br></br>2:00 PM to </br>5:00 PM</p>
                 </div>
 
               </div>
