debuggin, obscura and rev coding up

--- a/public/event/obscura/index.html
+++ b/public/event/obscura/index.html
@@ -87,14 +87,16 @@ Let's see how far you go, for there's no way you'll finish. We look forward to s
 Obscura, the place you'll never wanna leave, you'll never leave.
 Enter at own risk, there's no getting out.
               </p>
-              OBSCURA has ended.</br>
-              Winners<br>
-              Away- Popescu Mihai<br>
-              Home- Anandu Syrus
+              
               </div>
 
               <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>12th February 2018</br>to</br>25th February 2018</br></p>
+              <p><span class="spMagenta">#Date and timing</span></br>12th February 2018</br>to</br>25th February 2018</br>
+              <p class="spYellow">
+              OBSCURA has ended.</br>
+              Winners<br>
+              Away- Popescu Mihai<br>
+              Home- Anandu Syrus</p></p>
               </div>
 
           </div>
