--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,40 @@
 		</div>
 		<div class="row" style="margin:auto" >
 			<h1 id="events" style="text-align: center;"><span class="spMagenta">< Events ></span></h1>
-			<h2 class="spGreen" style="text-align: center;padding-bottom: 100px;">&nbsp coming soon</h2>
+			<div class="col-md-4 col-sm-4">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugging/';">
+					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
+					<div class='wave -two'></div>
+					<div class='wave -three'></div>
+					<img src="assets/img/icondebugging.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+					<p style="text-align: center;margin-top: 78px;">< Debugger ></p>
+					<p class="prize">$prize:8k</p>
+				</div>
+			</div>
+
+			<div class="col-md-4 col-sm-4">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
+					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
+					<div class='wave -two'></div>
+					<div class='wave -three'></div>
+					<img src="assets/img/iconreversecoding.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+					<p style="text-align: center;margin-top: 78px;">< reverse_coding ></p>
+					<p class="prize">$prize:8k</p>
+				</div>
+			</div>
+			
+			
+			<div class="col-md-4 col-sm-4">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
+					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
+					<div class='wave -two'></div>
+					<div class='wave -three'></div>
+					<img src="assets/img/icon obscura.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+					<p style="text-align: center;margin-top: 78px;">< Obscura ></p>
+					<p class="prize">$prize:6k</p>
+				</div>
+			</div>
+			<!-- <h2 class="spGreen" style="text-align: center;padding-bottom: 100px;">&nbsp coming soon</h2> -->
 			<!-- <div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -222,16 +255,7 @@
 					<p class="prize">$prize:11k</p>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-4">
-				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/debugging/';">
-					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
-					<div class='wave -two'></div>
-					<div class='wave -three'></div>
-					<img src="assets/img/icondebugging.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
-					<p style="text-align: center;margin-top: 78px;">< Debugger ></p>
-					<p class="prize">$prize:8k</p>
-				</div>
-			</div>
+			
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -252,26 +276,7 @@
 					<p class="prize">$prize:13k</p>
 				</div>
 			</div>
-			<div class="col-md-4 col-sm-4">
-				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
-					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
-					<div class='wave -two'></div>
-					<div class='wave -three'></div>
-					<img src="assets/img/iconreversecoding.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
-					<p style="text-align: center;margin-top: 78px;">< reverse_coding ></p>
-					<p class="prize">$prize:8k</p>
-				</div>
-			</div>
-			<div class="col-md-4 col-sm-4">
-				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
-					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
-					<div class='wave -two'></div>
-					<div class='wave -three'></div>
-					<img src="assets/img/icon obscura.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
-					<p style="text-align: center;margin-top: 78px;">< Obscura ></p>
-					<p class="prize">$prize:6k</p>
-				</div>
-			</div>
+			
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/photomanipulation/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
