--- a/public/event/debugging/index.html
+++ b/public/event/debugging/index.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="col-md-5">
-                  <p><span class="spMagenta">#Date and timing</span></br>24th February 2018</br>1:15 PM to 4:30 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>7th April 2018</br>10:00 AM to 12:00 PM</p>
                 </div>
 
               </div>
