updated everything ( hopefully ) :angel:

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
 					<p class="prize">$prize:8k</p>
 				</div>
 			</div>
-
+<!--
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -212,7 +212,7 @@
 					<p class="prize">$prize:8k</p>
 				</div>
 			</div>
-			
+	-->		
 			
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
@@ -266,6 +266,7 @@
 					<p class="prize">$prize:10k</p>
 				</div>
 			</div>
+		-->
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/gaming/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -286,9 +287,9 @@
 					<p style="text-align: center;margin-top: 78px;">< Photomanipulation ></p>
 					<p class="prize">$prize:2.5k</p>
 				</div>
-			</div> -->
+			</div> 
 		</div>
-		<!--<div class="row" style="margin:auto" >
+		<div class="row" style="margin:auto" >
 			<div class="col-md-10 col-md-offset-1">
 				<h1 id="events" style="text-align: center;"><span class="spPurple" style=""> Talk_series();</span></h1>
 				<h3 style="text-align: center;">Information Security</h3>
@@ -303,9 +304,10 @@
 					<p style="text-align: center;margin-top: 20px;">
 						Sreenath Sasikumar
 						<br>
-						Day 1</p>
+						Day 2</p>
 					</div>
 				</div>
+				<!--
 				<div class="col-md-5 col-sm-5">
 					<div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='talks/series/information_security/2/';" >
 
