--- a/public/event/gaming/fifa/index.html
+++ b/public/event/gaming/fifa/index.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="col-md-5">
-                  <p><span class="spMagenta">#Date and timing</span></br>25th February 2018</br>9:00 AM to 4:30 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>8th April 2018</br>1:00 PM to 4:00 PM</p>
                 </div>
 
               </div>
