--- a/public/event/gaming/index.html
+++ b/public/event/gaming/index.html
@@ -57,14 +57,7 @@
 
       <div class="row" style="padding-top: 10vh;">
         <h1 style="text-align: center;"><span class="spMagenta">< Gaming ></span></h1>
-        <div class="col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1">
-          <div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='rainbow_six_siege/';" >
-
-            <img src="../../assets/img/events/gaming/rainbow_six_siege/image.jpg" style="height: 350px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
-            <p style="text-align: center;margin-top: 20px;">Tom Clancy's Rainbow Six Siege</p>
-
-          </div>
-        </div>
+         
         <div class="col-md-5 col-sm-5">
           <div class='box talks' style="background-color: rgb(28, 28, 27);" onclick="location.href='fifa/';" >
 
@@ -73,6 +66,18 @@
 
           </div>
         </div>
+
+        <div class="col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1">
+          <div class='box talks' style="background-color: rgb(28, 28, 27);">
+            <h2 style="padding: 50px;"> more games coming soon ...</h2>
+            <!-- onclick="location.href='rainbow_six_siege/';" >
+
+             <img src="../../assets/img/events/gaming/rainbow_six_siege/image.jp g" style="height: 350px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
+            <p style="text-align: center;margin-top: 20px;">Tom Clancy's Rainbow Six Siege</p> -->
+
+          </div>
+        </div> 
+        
       </div>
       <section class="foot" style="background-color: #232323" id="footerr">
         <div class="row">
