--- a/public/event/photomanipulation/index.html
+++ b/public/event/photomanipulation/index.html
@@ -63,7 +63,7 @@
      <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
   <div class="col-md-4">
   <img src="../../assets/img/iconphotomani.png" class="img-responsive pull-center">
- <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://goo.gl/forms/bit6rkwsKDqg7dQq1" ><span class="spMagenta" >Register_now()</span></a></br></p>
+ <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://docs.google.com/forms/d/e/1FAIpQLSeVw1NG8nPYIIYLjpJcmntTsNVnP9LkqTs5k5vHi56H4-1lUQ/viewform?usp=sf_link" ><span class="spMagenta" >Register_now()</span></a></br></p>
   <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
 </div>
 <div class="col-md-7">
@@ -88,7 +88,7 @@
               </div>
 
               <div class="col-md-5">
-              <p><span class="spMagenta">#Date and timing</span></br>25th February 2018</br>9:00 AM to 12:00 PM</p>
+              <p><span class="spMagenta">#Date and timing</span></br>7th April 2018</br>10:00 AM to 12:00 PM</p>
               </div>
 
           </div>
@@ -117,7 +117,7 @@
 
 
               <div class="col-md-6">
-               <p style="font-size: 30px;margin-top: 20px;"><a href="https://goo.gl/forms/bit6rkwsKDqg7dQq1" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
+               <p style="font-size: 30px;margin-top: 20px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeVw1NG8nPYIIYLjpJcmntTsNVnP9LkqTs5k5vHi56H4-1lUQ/viewform?usp=sf_link" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
               </div>
 
               <div class="col-md-6">
