--- a/public/event/reverse_coding/index.html
+++ b/public/event/reverse_coding/index.html
@@ -60,7 +60,7 @@
         <h1 style="text-align: center;"><span class="spMagenta">< Event ></span></h1>
         <div class="col-md-4">
           <img src="../../assets/img/iconreversecoding.png" class="img-responsive pull-center">
-          <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://goo.gl/forms/Qo19IzOn4CxssQql1" ><span class="spMagenta" >Register_now()</span></a></br></p>
+          <p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="" href="https://docs.google.com/forms/d/e/1FAIpQLSdGGD7IZ-l6JZ2a3LJWZ2xUp3ED1km2o6CcADOJmP58S657Iw/viewform?usp=sf_link" ><span class="spMagenta" >Register_now()</span></a></br></p>
           <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
         </div>
         <div class="col-md-7">
@@ -106,7 +106,7 @@
 
 
                 <div class="col-md-6">
-                  <p style="font-size: 30px;margin-top: 20px;"><a href="https://goo.gl/forms/Qo19IzOn4CxssQql1" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
+                  <p style="font-size: 30px;margin-top: 20px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdGGD7IZ-l6JZ2a3LJWZ2xUp3ED1km2o6CcADOJmP58S657Iw/viewform?usp=sf_link" onclick=""><span class="spMagenta" >Register_now()</span></a></br></p>
                 </div>
 
                 <div class="col-md-6">
