--- a/public/workshop/web_development/index.html
+++ b/public/workshop/web_development/index.html
@@ -85,13 +85,13 @@
 
                     Department of Computer Science and Engineering of College of Engineering Trivandrum in association with Mozilla Campus Club, CET presents to you at Dot Slash ‘18 a six-hour hands-on workshop on Introduction to Web.<br>
 
-                    The workshop is specifically targeted at school students (Classes VII, VIII, IX).<br><br>
+                    The workshop is specifically targeted at school students (Classes IX, X, XI, and XII).<br><br>
                     <span class="spOrange">Free entry for school students.</span>
                   </p>
                 </div>
 
                 <div class="col-md-4">
-                  <p><span class="spMagenta">#Date and timing</span></br>7th April 2018 </br> 9:00 AM to 4:00 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>8th April 2018 </br> 9:00 AM to 5:00 PM</p>
                 </div>
 
               </div>
