--- a/public/index.html
+++ b/public/index.html
@@ -201,18 +201,18 @@
 					<p class="prize">$prize:8k</p>
 				</div>
 			</div>
-<!--
+
 			<div class="col-md-4 col-sm-4">
-				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/reverse_coding/';">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/code_maze/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
 					<img src="assets/img/iconreversecoding.png" style="height: 230px;margin: auto;display: inherit;padding-bottom: 20px;padding-top: 30px;">
-					<p style="text-align: center;margin-top: 78px;">< reverse_coding ></p>
+					<p style="text-align: center;margin-top: 78px;">< code_maze ></p>
 					<p class="prize">$prize:8k</p>
 				</div>
 			</div>
-	-->		
+		
 			
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
