--- a/public/event/code_maze/index.html
+++ b/public/event/code_maze/index.html
@@ -92,7 +92,7 @@
               <div style="margin-top: 30px;" class ="row">
 
                 <div class="col-md-8">
-                  <p ><span class="spPurple" > >>>Event Rules</span></br>* A team can consist of utmost 2 members</br>* Syntactic help of languages will be provided by the coordinators if needed </br>* Efficiency of the code will also be tested</p>
+                  <p ><span class="spPurple" > >>>Event Rules</span></br>* Syntactic help of languages will be provided by the coordinators if needed </br>* Efficiency of the code will also be tested</p>
                 </div>
                 <div class="col-md-4">
                   <p><span class="spOrange">$Prizes</span></p><p>* First - <span style="font-size:30px;margin-top: 10px;">5k</span></p>
