--- a/public/index.html
+++ b/public/index.html
@@ -225,16 +225,17 @@
 				</div>
 			</div>
 			<!-- <h2 class="spGreen" style="text-align: center;padding-bottom: 100px;">&nbsp coming soon</h2> -->
-			<!-- <div class="col-md-4 col-sm-4">
-				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/bitcoin_challenge/';">
+		    <div class="col-md-4 col-sm-4">
+				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/series_quiz/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
 					<div class='wave -two'></div>
 					<div class='wave -three'></div>
-					<img src="assets/img/iconbitcoin.png" style="height: 230px;margin: auto;display: inherit;padding-top: 30px;">
-					<p style="text-align: center;margin-top: 78px;">< Bitcoin_challenge ></p>
-					<p class="prize">$prize:20k</p>
+					<img src="assets/img/sqzicon.png" style="height: 230px;margin: auto;display: inherit;padding-top: 30px;">
+					<p style="text-align: center;margin-top: 78px;">< series_quiz ></p>
+					<p class="prize">$prize:4k</p>
 				</div>
 			</div>
+			<!--
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/women_coder';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
