changes in talk

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 			<div class=" col-md-4  col-sm-4   ">
 				<div class="item-ws"  onclick="location.href='workshop/web_development/';">
 					<div class="controls">
@@ -170,7 +170,7 @@
 
 			 -->
 
-		
+
 
 
 
@@ -182,7 +182,7 @@
 				<h2 class="spYellow">&nbsp code();</h2>
 				<h2 class="spGreen">&nbsp save();</h2>
 				<h2 class="spPurple">repeat</h2>
-				
+
 				<p></p>
 			</div>
 			<div class="col-md-4">
@@ -212,8 +212,8 @@
 					<p class="prize">$prize:8k</p>
 				</div>
 			</div>
-		
-			
+
+
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/obscura/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -256,7 +256,7 @@
 					<p class="prize">$prize:11k</p>
 				</div>
 			</div>
-			
+
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/quiz/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -278,7 +278,7 @@
 					<p class="prize">$prize:13k</p>
 				</div>
 			</div>
-			
+
 			<div class="col-md-4 col-sm-4">
 				<div class='item-event box' style="background-color: rgb(28, 28, 27);" onclick="location.href='event/photomanipulation/';">
 					<div class='wave -one' style="background-color: rgb(236,65,118);"></div>
@@ -288,7 +288,7 @@
 					<p style="text-align: center;margin-top: 78px;">< Photomanipulation ></p>
 					<p class="prize">$prize:2.5k</p>
 				</div>
-			</div> 
+			</div>
 		</div>
 		<div class="row" style="margin:auto" >
 			<div class="col-md-10 col-md-offset-1">
@@ -305,7 +305,8 @@
 					<p style="text-align: center;margin-top: 20px;">
 						Sreenath Sasikumar
 						<br>
-						Day 2</p>
+						<!-- Day 2 -->
+					</p>
 					</div>
 				</div>
 				<!--
