--- a/public/talks/series/information_security/1/index.html
+++ b/public/talks/series/information_security/1/index.html
@@ -64,7 +64,7 @@
         <div class="col-md-4">
           <img src="../../../../assets/img/secure.png" class="img-responsive pull-center" style="margin: auto; margin-bottom: 40px;">
           <p align="center">Brought to you by</p>
-          <img src="../../../../assets/img/mashuplogo.png" class="img-responsive pull-center" style="margin: auto;">
+          <img src="../../../../assets/img/MashupStack-logo-white.png" class="img-responsive pull-center" style="margin: auto;">
           <!--<p style="font-size: 30px;margin-top: 20px; text-align: center;"><a onclick="popup('dotslash-workshops-100344');" href="#" ><span class="spMagenta">Register_now()</span></a></br></p>-->
           <!-- <button  class="tsbutton">Register Now</button> --><!-- <noscript id="tsNoJsMsg">Javascript on your browser is not enabled.</noscript><script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script> -->
         </div>
@@ -79,22 +79,19 @@
             </div>
             <div class="item-desc">
 
-              <p class="item-heading">Information Security - Day 2</p>
+              <p class="item-heading">Information Security</p>
               <div style="margin-top: 30px;" class ="row">
 
                 <div class="col-md-12">
                   <p>
                     <span class="spMagenta" >//Speaker - Sreenath Sasikumar</span></br>
                     He has worked with companies such as IBM, QBurst and DBG. He is a fullstack web developer, web security consultant and startup technology mentor. Recently he got listed in Google Hall of Fame. He is the developer of 8 Mozilla addons and has been a Global board member of Mozilla Firefox Addons Review Committee. He is also a speaker and co-organizer at Google Developer Group, Trivandrum and board member of OWASP Kerala. He is technical reviewer of three books from Packt Publishers, Burmingham UK.
-                    For his complete profile, please visit <span><a href="http://www.mashupacademy.com/"  class="spPurple">mashupacademy.com</a></span></br>
-
-
-
+                    For his complete profile, please visit <span><a href="https://www.mashupstack.com/"  class="spPurple">mashupstack.com</a></span></br>
                   </p>
                 </div>
 
                 <div class="col-md-5">
-                  <p><span class="spMagenta">#Date and timing</span></br>8th April 2018</br>2:00 PM to - 3:00 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>7th April 2018</br>5:00 PM to - 6:00 PM</p>
                 </div>
 
               </div>
