--- a/public/event/code_maze/index.html
+++ b/public/event/code_maze/index.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="col-md-5">
-                  <p><span class="spMagenta">#Date and timing</span></br>7th April 2018</br>10:00 AM to - 12:00 PM</p>
+                  <p><span class="spMagenta">#Date and timing</span></br>7th April 2018</br>1:30 PM to - 4:00 PM</p>
                 </div>
 
               </div>
